CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(TOOLS_CXX)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})

ADD_SUBDIRECTORY(tools/base)
ADD_SUBDIRECTORY(tools/config)
ADD_SUBDIRECTORY(tools/coroutine)
ADD_SUBDIRECTORY(tools/log)
ADD_SUBDIRECTORY(tools/poller)
ADD_SUBDIRECTORY(tools/socket)
ADD_SUBDIRECTORY(tools/threadpool)
ADD_SUBDIRECTORY(tools/timer)