CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(Tools_cxx_test)

ADD_COMPILE_OPTIONS(-std=c++11)
INCLUDE_DIRECTORIES(/usr/local/include)
LINK_DIRECTORIES(/usr/local/lib)

# ADD_SUBDIRECTORY(base)
# ADD_SUBDIRECTORY(config)
ADD_SUBDIRECTORY(error)
ADD_SUBDIRECTORY(log)
# ADD_SUBDIRECTORY(socket)
# ADD_SUBDIRECTORY(threadpool)
# ADD_SUBDIRECTORY(timer)