ADD_EXECUTABLE(EchoClient EchoClient.cpp)
TARGET_LINK_LIBRARIES(EchoClient tools_cxx)

ADD_EXECUTABLE(EchoServer EchoServer.cpp)
TARGET_LINK_LIBRARIES(EchoServer tools_cxx)

ADD_EXECUTABLE(EchoServer_select EchoServer_select.cpp)
TARGET_LINK_LIBRARIES(EchoServer_select tools_cxx)

ADD_EXECUTABLE(EchoServer_poll EchoServer_poll.cpp)
TARGET_LINK_LIBRARIES(EchoServer_poll tools_cxx)

ADD_EXECUTABLE(EchoServer_epoll EchoServer_epoll.cpp)
TARGET_LINK_LIBRARIES(EchoServer_epoll tools_cxx)

ADD_EXECUTABLE(EchoServer_coroutine EchoServer_coroutine.cpp)
TARGET_LINK_LIBRARIES(EchoServer_coroutine tools_cxx pthread)

ADD_EXECUTABLE(EchoServer_poller EchoServer_poller.cpp)
TARGET_LINK_LIBRARIES(EchoServer_poller tools_cxx)